@@ -218,11 +218,13 @@ def suite():
             ('dynalign', 'test_dynalign'),
             ('FastTree', 'test_fasttree'),
             ('foldalign', 'test_foldalign'),
+            ('formatdb', 'test_formatdb'),
             ('guppy', 'test_guppy'),
             ('ilm', 'test_ilm'),
             ('knetfold.pl', 'test_knetfold'),
             ('mafft', 'test_mafft'),
             ('mfold', 'test_mfold'),
+            ('mothur', 'test_mothur'),
             ('muscle', 'test_muscle_v38'),
             ('msms', 'test_msms'),
             ('ParsInsert', 'test_parsinsert'),
